Add main index and blog index for website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <html>
-  <body>
-      Hello DBC!
-  </body>
+<title>Home Page</title>
+<body>
+  <header>
+  </header>
+  <nav>
+  </nav>
+  <section>
+  	<h3>Main section for index</h3>
+  </section>
+  <footer>
+  </footer>
+</body>
 </html>
