Update my website for week-3

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
-<title>Home Page</title>
+
+<head>
+	<title>Home Page</title>
+	<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+</head>
 <body>
   <header>
+    <h1>What I Do</h1>
   </header>
+   <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
+    <a href="/projects/index.html">Projects</a>
+    <a href="/blog/index.html">Blog</a>
+    <a href="/about_me/index.html">About Me</a>
+    <a href="/social/index.html">Social</a>
+    <a href="/contact/index.html">Contact</a>
   </nav>
+   <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <section>
   	<h3>Main section for index</h3>
   </section>
+  <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
+    <p>&copy; 2015 </p>
   </footer>
 </body>
 </html>
