Add Contacts page for website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section>
   	<h3>Main section for index</h3>
   </section>
-  <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
+  <img id="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
     <p>&copy; 2015 </p>
   </footer>
