--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
   <nav>
     <a title="follow me on facebook" href="https://www.facebook.com/profile.php?id=934315"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook40x40.png" border=0></a>
     <a title="check me out on github" href="https://github.com/seanfromiran"><img alt="check me out on github" src="../imgs/octobiwan.png" border=0></a>
-    <a title="follow me on facebook" href="mailto:seanfromiran@gmail.com?Subject=What's%20Hannin"><img alt="shoot me an e-mail" src="../imgs/g-mail.png" border=0></a>
+    <a title="shoot me an e-mail" href="mailto:seanfromiran@gmail.com?Subject=What's%20Hannin"><img alt="shoot me an e-mail" src="../imgs/g-mail.png" border=0></a>
   </nav>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
