--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1>What I Do</h1>
   </header>
-   <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
+    <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
     <a href="/projects/index.html">Projects</a>
     <a href="/blog/index.html">Blog</a>
@@ -21,7 +21,7 @@
   <section>
   	<h3>Main section for index</h3>
   </section>
-  <img id="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
+  <img id="hug-bot"  src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
     <p>&copy; 2015 </p>
   </footer>
