--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </section>
   <img id="hug-bot"  src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <p>&copy; 2015 </p>
+     <p id="copyright">&copy; 2015<p>
   </footer>
 </body>
 </html>
