--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
   </nav>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <p>&copy; 2015 </p>
+    <p id="copyright">&copy; 2015<p>
   </footer>
 </body>
 </html>
