--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,8 @@
   </nav>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <p id="copyright">&copy; 2015<p>
+    <a href="../index.html">Home</a>
+    &copy; 2015
   </footer>
 </body>
 </html>
