--- a/projects/index.html
+++ b/projects/index.html
@@ -11,15 +11,15 @@
   </header>
      <img class="displayed" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
-    <a title="project1" href="#"><img alt="project1"></a>
-    <a title="project2" href="#"><img alt="project2"></a>
-    <a title="project3" href="#"><img alt="project3"></a>
+    <a title="project1" href="#"><img alt="&diams; project1 &diams;"></a>
+    <a title="project2" href="#"><img alt="&diams; project2 &diams;"></a>
+    <a title="project3" href="#"><img alt="&diams; project3 &diams;"></a>
   </nav>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <a href="../index.html">Home</a>
+    <a class="bot-link" href="../index.html">&diams; home &diams;</a>
     &copy; 2015
-    <a href="../contact/index.html">Contact</a>
+    <a class="bot-link" href="../contact/index.html">&diams; contact &diams;</a>
   </footer>
 </body>
 </html>
