--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
   </header>
      <img class="displayed" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
-    <a title="project1" href="#"><img alt="&diams; project1 &diams;"></a>
+    <a title="cheat sheet" href="cheat-sheet.html"><img alt="&diams; cheat sheet &diams;"></a>
     <a title="project2" href="#"><img alt="&diams; project2 &diams;"></a>
     <a title="project3" href="#"><img alt="&diams; project3 &diams;"></a>
   </nav>
