--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -14,8 +14,8 @@
     <ul id="cheat-list"><h3><span>Four position values</span></h3>
       <li>The static positioning value is the default. We cannot use the top, right, bottom, and left properties for this positioning. Instead, this value lets an element move with the natural flow of the page.</li><br>
       <li>Relative positioning uses static positioning as a basis for where it should be on a page. By using the top, right, bottom, and left properties, we can adjust an elements position relative to its static position. It is important to note that other elements are still going to be placed with regard to a relatively positioned elements static position.</li><br>
-      <li>This is the default positioning element. </li><br>
-      <li>This is the default positioning element. </li><br>
+      <li>We use fixed positioning to place an element relative to the viewing window of the user. This means that the element will not move even as the page is scrolled and we can use the top, right, bottom , and left properties to define its position.  </li><br>
+      <li>Lastly, there is absolute positioning, which places an element relative to its closest non-static positioned ancestor. If there are no non-static positioned ancestors, an absolute positioned element uses the document body as a reference point.</li><br>
     </ul>
   </section>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
