--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </header>
     <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
-    <a href="/projects/index.html">Projects</a>
-    <a href="/blog/index.html">Blog</a>
-    <a href="/about_me/index.html">About Me</a>
-    <a href="/social/index.html">Social</a>
-    <a href="/contact/index.html">Contact</a>
+    <a href="/projects/index.html">&diams; projects &diams;</a>
+    <a href="/blog/index.html">&diams; blog &diams;</a>
+    <a href="/about_me/index.html">&diams; about me &diams;</a>
+    <a href="/social/index.html">&diams; social &diams;</a>
+    <a href="/contact/index.html">&diams; contact &diams;</a>
   </nav>
    <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <section>
@@ -23,7 +23,6 @@
   </section>
   <img id="hug-bot"  src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-     <a href="../index.html">Home</a>
     &copy; 2015
   </footer>
 </body>
