--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-	<title>Home Page</title>
+	<title>About Me</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
-  <link rel="stylesheet" type="text/css" href="../stylesheets/about_me.css">
 </head>
 <body>
   <header>
     <h1>Who I am</h1>
-    <h4><a href="../index.html">Home</a></h4>
   </header>
   <img class="displayed" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <section>
@@ -35,7 +33,9 @@
   </section>
   <img id="hug-bot"  src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <p id="copyright">&copy; 2015<p>
+    <a class="bot-link" href="../index.html">&diams; home &diams;</a>
+    Sean Massih &copy; 2015
+    <a class="bot-link" href="../contact/index.html">&diams; contact &diams;</a>
   </footer>
 </body>
 </html>
