--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   </header>
     <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <nav>
+    <span id="main-nav">
     <a href="/projects/index.html">&diams; projects &diams;</a>
     <a href="/blog/index.html">&diams; blog &diams;</a>
     <a href="/about_me/index.html">&diams; about me &diams;</a>
     <a href="/social/index.html">&diams; social &diams;</a>
     <a href="/contact/index.html">&diams; contact &diams;</a>
+    </span>
   </nav>
    <img class="displayed" src="imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    &copy; 2015
+    Sean Massih &copy; 2015
   </footer>
 </body>
 </html>
