--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,7 @@
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
     <a class="bot-link" href="../index.html">&diams; home &diams;</a>
-    &copy; 2015
+    Sean Massih &copy; 2015
     <a class="bot-link" href="../contact/index.html">&diams; contact &diams;</a>
   </footer>
 </body>
