--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
     <a href="../index.html">Home</a>
-    &copy; 2015
+    Sean Massih &copy; 2015
   </footer>
 </body>
 </html>
