--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
   </nav>
   <img id="hug-bot" src="../imgs/moon-line.png" alt="Moon Line" style="width:1114px; height 55px;">
   <footer>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">&diams; home &diams;</a>
     Sean Massih &copy; 2015
   </footer>
 </body>
